# german_tax_preorganizer

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTENT_PROVENANCE.md  LICENSE_POLICY.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
config/: ai_review_prompt.txt  categories.yaml
docs/: HANDOFF.md  QUICK_START.md
prompts/: initial_prompt.md  interactions.md
scripts/: check_license_metadata.py  suggest_local_config.py
src/invoice_sorter/: agent_client.py  agent_service.py  ai_review.py  cli.py  extraction_adapter.py  gui.py  metadata_extraction.py  models.py  orchestrator.py  report.py
tests/: test_agent_server_endpoints.py  test_agent_streaming.py  test_ai_review.py  test_classifier.py  test_cli_dry_run.py  test_exec_pdf.py  test_gui_controls.py  test_metadata_extraction.py  test_report.py
