[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-sorter"
version = "0.1.0"
description = "Local-first invoice sorter for German/English tax preparation (CLI-first, privacy-preserving)."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "Apache-2.0" }
authors = [{ name = "Thomas Suedbroecker" }]

# Core runtime deps are intentionally light. Text extraction backends are
# optional extras so the CLI never crashes when a backend is missing.
dependencies = [
    "PyYAML>=6.0",
    "python-dateutil>=2.9",
    "rich>=13.0",
]

[project.optional-dependencies]
# Intended primary backend (Docling-first). Heavy: pulls in torch + models.
docling = ["docling>=2.20.0"]
# Lightweight fallback backend so the prototype runs without Docling.
light = ["pdfplumber>=0.11", "pypdf>=4.0", "pytesseract>=0.3.13", "Pillow>=10.0"]
# Optional DOCX export (Phase 7) and tests.
docx = ["python-docx>=1.1"]
test = ["pytest>=8.0"]

[project.scripts]
invoice-sorter = "invoice_sorter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
